# discli

./: .gitignore  Cargo.toml  IMAGE_SUPPORT_PLAN.md  README.md  SKILL.md  discli.env.example  hooks.yaml  hooks.yaml.example
plans/: hook-system-implementation-plan.md
prompts/: ai-response.txt  command.txt  simple-echo.txt
src/: cli.rs  error.rs  main.rs
src/commands/: embed.rs  image.rs  listen.rs  mod.rs  send.rs
src/config/: env.rs  mod.rs
src/discord/: api.rs  client.rs  gateway.rs  mod.rs  types.rs
src/hooks/: config.rs  executor.rs  mod.rs  trigger.rs
src/message/: attachment.rs  builder.rs  mod.rs  validation.rs
src/processing/: command.rs  http.rs  mod.rs
src/prompt/: loader.rs  mod.rs  registry.rs  variables.rs
