[package]
name = "discli"
version = "0.1.0"
edition = "2024"
description = "A CLI tool for sending Discord notifications"
license = "MIT"

[dependencies]
reqwest = { version = "0.12", features = ["json"] }
tokio = { version = "1.40", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
dotenv = "0.15"
