[package]
name = "discli"
version = "0.2.0"
edition = "2021"
description = "A CLI tool for Discord with send, listen, and AI response modes"
license = "MIT"
repository = "https://github.com/kyle/discli"

[package.metadata]
exclude = ["*.env", "discli.env"]

[dependencies]
reqwest = { version = "0.12", features = ["json", "multipart"] }
tokio = { version = "1.40", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
dotenv = "0.15"
clap = { version = "4.5", features = ["derive"] }
mime_guess = "2.0"
thiserror = "1.0"
twilight-gateway = "0.17"
twilight-model = "0.17"
twilight-http = "0.17"
futures-util = "0.3"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
serde_yaml = "0.9"
regex = "1.10"
glob = "0.3"
tempfile = "3.10"
rustls = { version = "0.23", features = ["aws-lc-rs"] }
